ingress-rule.yaml
# kubectl create secret tls ingress-secret --key mykey.key --cert STAR_singhritesh85_com.crt -n responsive-website
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: responsive-website-ingress
  namespace: responsive-website
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - secretName: ingress-secret
  rules:
  - host: responsivewebsite.singhritesh85.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: responsive-website-folo
            port:
              number: 80
